# deep-agents-from-scratch

./: CLAUDE.md  README.md  deepagents.md  langchain_v1.md  langgraph.json  outline.txt  pyproject.toml
notebooks/: 0_create_agent.ipynb  1_react_agent.ipynb  1_todo.ipynb  2_files.ipynb  3_subagents.ipynb  4_full_agent.ipynb  Lesson1.ipynb  outline.txt  utils.py
src/deep-agents-from-scratch/: react_agent.py
src/deep_agents_from_scratch/: __init__.py  file_tools.py  prompts.py  research_tools.py  search_tools.py  state.py  task_tool.py  todo_tool.py  todo_tools.py
studio/: langgraph.json  studio_react_agent.py
