[project]
name = "deep-agents-from-scratch"
version = "0.0.1"
description = "General purpose 'deep agent' with sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-anthropic>=0.1.23",
    "langchain>=0.2.14",
    "tavily-python>=0.7.10",
    "jupyterlab",
    "langgraph-cli[inmem]",
]



